--- a/public/index1.html
+++ b/public/index1.html
@@ -1,12 +1,15 @@
 <html>
 <head>
-    <link rel="stylesheet" href="/app.css">
+    <link rel="stylesheet" href="/css/app.css">
+    <title>Second Page</title>
 </head>
 <body>
 
 <div class="body">
-
+    Bugatti veyron
 </div>
-<img src="/banner.php">
+
+<img class="car" src="/img/car1.jpg">
+<img style="display: none" src="/banner.php?banner_id=2">
 </body>
 </html>
