+ add image in response + add response headers

--- a/public/index1.html
+++ b/public/index1.html
@@ -10,6 +10,8 @@
 </div>
 
 <img class="car" src="/img/car1.jpg">
-<img style="display: none" src="/banner.php?banner_id=2">
+
+<img class="banner"  src="/banner.php?banner_id=1">
+
 </body>
 </html>
