--- a/public/index2.html
+++ b/public/index2.html
@@ -9,6 +9,8 @@
     Ferrari laferrari
 </div>
 <img class="car" src="/img/car2.jpg">
-<img style="display: none" src="/banner.php?banner_id=2">
+
+<img class="banner" src="/banner.php?banner_id=2">
+
 </body>
 </html>
